[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "abb_model_demo"
version = "1.0.0"
dependencies = [
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.1",
    "torch>=2.1.2",
    "torchvision>=0.17.0",
    "pytest>=7.4.4",
    'importlib-metadata; python_version>="3.10"',
]
